# skill-plan-garden-maintenance

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  package-skill.sh  pyproject.toml  run-tests.sh
.github/workflows/: release.yml
reference/: example-output.md  plan.schema.json  task-taxonomy.md
tests/: conftest.py  rubrics.py  test_plan_quality.py  test_schema.py
tests/fixtures/gardens/garden_01/: case.json
tests/harness/: extract.py  generate.py  judge.py
